# dsoftbus_standard

./: README.en.md  README.md  dsoftbus.gni
adapter/: BUILD.gn
adapter/common/bus_center/: BUILD.gn
adapter/common/bus_center/platform/: bus_center_adapter.c  lnn_product_monitor.c
adapter/common/include/: softbus_adapter_socket.h
adapter/common/kernel/liteos_a/: softbus_adapter_file.c  softbus_adapter_timer.c
adapter/common/kernel/liteos_m/: softbus_adapter_file.c
adapter/common/log/: softbus_adapter_log.c
adapter/common/net/bluetooth/: BUILD.gn
adapter/common/net/wifi/: net_wifi.gni
adapter/default_config/feature_config/standard/: config.gni
components/nstackx/fillp/: BUILD.gn
components/nstackx/nstackx_congestion/: BUILD.gn
components/nstackx/nstackx_core/dfile/: BUILD.gn
components/nstackx/nstackx_ctrl/: BUILD.gn
components/nstackx/nstackx_util/: BUILD.gn
core/adapter/: core_adapter.gni
core/authentication/src/: auth_manager.c
core/bus_center/lnn/lane_hub/: BUILD.gn  lane_hub.gni
core/bus_center/lnn/net_builder/src/: lnn_state_machine.c
core/bus_center/utils/src/: lnn_state_machine.c
core/common/: BUILD.gn
core/common/include/: softbus_log.h
core/common/json_utils/: BUILD.gn
core/common/message_handler/: message_handler.c
core/common/security/permission/: BUILD.gn
core/common/security/permission/standard_system/: permission_utils.cpp  softbus_permission.cpp
core/connection/ble/src/: softbus_ble_trans_manager.c
core/connection/common/: BUILD.gn
core/connection/common/src/: softbus_thread_pool.c
core/frame/: BUILD.gn
core/frame/common/src/: softbus_server_frame.c
core/frame/standard/client/include/: softbus_client_stub.h
core/frame/standard/client/src/: softbus_client_stub.cpp
core/frame/standard/client_manager/src/: softbus_client_info_manager.cpp
core/frame/standard/init/include/: softbus_server.h
core/frame/standard/init/src/: softbus_server.cpp
core/frame/standard/server/: BUILD.gn
core/frame/standard/server/include/: softbus_server.h
core/frame/standard/server/src/: softbus_server.cpp  softbus_server_frame.c
sdk/: BUILD.gn
sdk/frame/common/src/: softbus_client_frame_manager.c
sdk/frame/standard/include/: softbus_client_stub.h
sdk/frame/standard/src/: softbus_client_stub.cpp
sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/: vtp_instance.cpp
