# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/dsoftbus/dsoftbus.gni")

ohos_prebuilt_etc("softbus_server.rc") {
  relative_install_dir = "init"
  if (use_musl) {
    source =
        "$dsoftbus_root_path/core/frame/standard/server/src/softbus_server.cfg"
  } else {
    source =
        "$dsoftbus_root_path/core/frame/standard/server/src/softbus_server.rc"
  }
  part_name = "dsoftbus_standard"
  subsystem_name = "communication"
}

ohos_shared_library("softbus_server") {
  include_dirs = [
    "$dsoftbus_root_path/interfaces/kits/common",
    "$dsoftbus_root_path/interfaces/kits/transport",
    "$dsoftbus_root_path/core/frame/standard/server/include",
    "$dsoftbus_root_path/core/connection/interface",
    "$dsoftbus_root_path/core/common/include",
    "$dsoftbus_root_path/core/frame/common/include",
    "$dsoftbus_root_path/core/frame/standard/softbusdata/include",
    "$dsoftbus_root_path/core/transmission/common/include",
    "$dsoftbus_root_path/core/transmission/trans_channel/manager/include",
    "$dsoftbus_root_path/core/connection/interface",
    "$dsoftbus_root_path/core/authentication/interface",
    "$dsoftbus_root_path/core/common/softbus_property/include",
    "$softbus_adapter_config/spec_config",
  ]
  sources = [
    "$dsoftbus_root_path/core/frame/standard/server/src/softbus_server_death_recipient.cpp",
    "$dsoftbus_root_path/core/frame/standard/server/src/softbus_server_frame.c",
    "src/if_softbus_server.cpp",
    "src/softbus_server.cpp",
    "src/softbus_server_stub.cpp",
  ]
  deps = [
    ":softbus_server.rc",
    "$dsoftbus_root_path/adapter:softbus_adapter",
    "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
    "$dsoftbus_root_path/core/bus_center:dsoftbus_bus_center_server",
    "$dsoftbus_root_path/core/common/log:softbus_log",
    "$dsoftbus_root_path/core/common/message_handler:message_handler",
    "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
    "$dsoftbus_root_path/core/common/utils:softbus_utils",
    "$dsoftbus_root_path/core/connection/manager:conn_manager",
    "$dsoftbus_root_path/core/discovery:dsoftbus_disc_server",
    "$dsoftbus_root_path/core/frame/standard/softbusdata:softbus_server_data",
    "$dsoftbus_root_path/core/transmission/session:dsoftbus_trans_session",
    "//utils/native/base:utils",
  ]
  if (is_standard_system) {
    external_deps = [
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_core",
      "safwk:system_ability_fwk",
    ]
  }
  part_name = "dsoftbus_standard"
  subsystem_name = "communication"
}

ohos_executable("softbus_server_main") {
  sources = [ "$dsoftbus_root_path/core/frame/small/init/src/softbus_server_main.c" ]
  include_dirs = [ "$dsoftbus_root_path/core/frame/common/include" ]
  deps = [
    "$dsoftbus_root_path/core/frame/standard/server:softbus_server",
    "$dsoftbus_root_path/adapter:softbus_adapter",
    "$dsoftbus_root_path/adapter/common/bus_center:dsoftbus_bus_center_monitor",
    "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
    "$dsoftbus_root_path/core/bus_center/lnn/lane_hub:dsoftbus_bus_center_hub",
    "$dsoftbus_root_path/core/bus_center/utils:dsoftbus_bus_center_utils",
    "$dsoftbus_root_path/core/bus_center:dsoftbus_bus_center_server",
    "$dsoftbus_root_path/core/common/log:softbus_log",
    "$dsoftbus_root_path/core/common/message_handler:message_handler",
    "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
    "$dsoftbus_root_path/core/common/utils:softbus_utils",
    "$dsoftbus_root_path/core/common/json_utils:json_utils",
    "$dsoftbus_root_path/core/common/security/permission:softbus_permission",
    "$dsoftbus_root_path/core/connection/common:conn_common",
    "$dsoftbus_root_path/core/connection/manager:conn_manager",
    "$dsoftbus_root_path/core/connection/ble:ble_connection",
    "$dsoftbus_root_path/core/connection/br:br_connection",
    "$dsoftbus_root_path/core/connection/tcp:tcp_connection",
    "$dsoftbus_root_path/core/discovery:dsoftbus_disc_server",
    "$dsoftbus_root_path/core/discovery/ble:ble_discovery",
    "$dsoftbus_root_path/core/discovery/coap:dsoftbus_disc_coap",
    "$dsoftbus_root_path/core/frame/standard/softbusdata:softbus_server_data",
    "$dsoftbus_root_path/core/transmission/session:dsoftbus_trans_session",
    "$dsoftbus_root_path/core/transmission/ipc:dsoftbus_trans_ipc_proxy",
    "$dsoftbus_root_path/core/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel",
    "$dsoftbus_root_path/core/transmission/trans_channel/udp_negotiation:dsoftbus_trans_udp_channel",
    "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel",
    "$dsoftbus_root_path/core/transmission/pending_packet:softbus_trans_pending",
    "$dsoftbus_root_path/core/transmission/common:dsoftbus_trans_common",
    "$dsoftbus_root_path/components/nstackx/nstackx_ctrl:nstackx_ctrl",
    "$dsoftbus_root_path/components/nstackx/nstackx_util:nstackx_util.open",
    "//third_party/libcoap:libcoap",
  ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "deviceauth_standard:deviceauth_sdk",
  ]
  part_name = "dsoftbus_standard"
  subsystem_name = "communication"
}
